results/SVCOMP/4-shot/log-BugTestGen095-2024_03_18_09_11_45.txt
public class BugTestGen095 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> sb.toString().equals("fg");
    public static boolean fun(String arg) {
        StringBuilder sb = new StringBuilder(arg);
        sb.append("Z");
        String s = sb.toString();
        return (s.equals("fg"));
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen095.java:4: error: cannot find symbol
    //@ ensures \result <==> sb.toString().equals("fg");
                             ^
  symbol:   variable sb
  location: class BugTestGen095
1 error

